# basic-project

./: README.md  docker-compose.yml  pyproject.toml
fastapi-application/: main.py  run.py
fastapi-application/alembic/versions/: 2025_01_06_2112-2491cd1d0a42_create_users_table.py  2025_01_06_2116-e834d2da0cf5_update_users_table.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: users.py
fastapi-application/core/: config.py
fastapi-application/core/gunicorn/: app_options.py  application.py  logger.py
fastapi-application/core/models/: base.py  db_helper.py  user.py
fastapi-application/core/schemas/: user.py
