[project]
name = "basic-application"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.37.0",
]
